force-app/main/default/objects/Log__e/fields/Limits__c.field-meta.xml
<CustomField>
    <fullName>Limits__c</fullName>
    <description>https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>Limits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>