force-app/main/default/objects/Log__e/fields/Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Id__c</fullName>
    <description>Apex Request Id
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_class_System_Request.htm</description>
    <label>Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>