force-app/main/default/objects/Log__e/fields/Running_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Running_User_ID__c</fullName>
    <label>Running User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>